# lang_sam_ros2

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
config/: config.yaml
lang_sam_executor/: CMakeLists.txt  package.xml
lang_sam_executor/config/: config.yaml  params.yaml
lang_sam_executor/launch/: lang_sam_executor.launch.py  lang_sam_tracker.launch.py  lang_segment_anything.launch.py  lang_segment_anything_legacy.launch.py  lang_segment_anything_native.launch.py  navigation.launch.py
lang_sam_executor/src/: multi_view_node.cpp
lang_sam_msgs/: CMakeLists.txt  package.xml
lang_sam_msgs/msg/: DetectionResult.msg  FeaturePoints.msg  SamMasks.msg  Track.msg
lang_sam_nav/: CMakeLists.txt  package.xml
lang_sam_nav/include/lang_sam_nav/: lane_following_node.hpp  lane_pixel_finder.hpp
lang_sam_nav/src/: lane_following_node.cpp  lane_pixel_finder.cpp
lang_sam_person_following/: CMakeLists.txt  package.xml
lang_sam_person_following/include/lang_sam_person_following/: lang_sam_person_following_node.hpp
lang_sam_person_following/src/: lang_sam_person_following_node.cpp  main.cpp
lang_sam_ros2/: __init__.py  debug_lang_segment_anything.py  lang_sam_node.py  lang_segment_anything.py  lang_segment_anything_mask.py  lang_segment_anything_optflow.py  main.py  optflow_node.py
lang_sam_tracker/: CMakeLists.txt  package.xml
lang_sam_tracker/config/: params.yaml
lang_sam_tracker/lang_sam/: lang_sam.py
lang_sam_tracker/lang_sam_tracker/: lang_sam_tracker_node.py
lang_sam_tracker/launch/: lang_sam_tracker.launch.py
lang_sam_wrapper/: CMakeLists.txt  package.xml  setup.cfg  setup.py
lang_sam_wrapper/config/: config.yaml
lang_sam_wrapper/csrt_cpp/: async_processor.cpp  async_processor.hpp  csrt_tracker.cpp  csrt_tracker.hpp  csrt_tracker_backup.cpp  csrt_tracker_native.cpp  csrt_tracker_native.hpp  fast_bindings.cpp  image_processor.cpp  image_processor.hpp  python_bindings.cpp
lang_sam_wrapper/lang_sam/: __init__.py  exceptions.py  frame_buffer.py  lang_sam.py  lang_sam_tracker.py  server.py  tracking.py  utils.py
lang_sam_wrapper/lang_sam/models/: __init__.py  coordinator.py  gdino.py  sam.py
lang_sam_wrapper/lang_sam/tracker_utils/: __init__.py  config_manager.py  csrt_client.py  csrt_native_client.py  csrt_tracker.py  exceptions.py  frame_buffer.py  lang_sam_tracker.py  logging_manager.py  model_coordinator.py  tracking_config.py  tracking_manager.py
lang_sam_wrapper/lang_sam_wrapper/: __init__.py  debug_lang_segment_anything.py  fast_processing_client.py  feature_extraction.py  feature_pool.py  gpu_resource_manager.py  interpolation_node.py  lang_sam_node.py  lang_sam_tracker_node.py  lang_sam_tracker_node_async.py  lang_sam_tracker_node_legacy.py  lang_sam_tracker_node_native.py  langsam_with_optflow_node.py  langsam_with_optflow_node.py.backup  main.py  multi_view_node.py  new_langsam_optflow_node.py  optflow_node.py  utils.py
lang_sam_wrapper/launch/: interpolation_node.launch.py  lang_segment_anything.launch.py  new_langsam_optflow.launch.py
launch/: lang_segment_anything.launch.py
