<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lang_sam_ros2</name>
  <version>0.0.1</version>
  <description>LangSAMをROS2で使うためのパッケージ</description>
  <maintainer email="babaryusei.kw@gmail.com">Ryusei Baba</maintainer>
  <license>Apache-2.0</license>

  <!-- 実行時に必要な依存 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <!-- テスト依存 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
