cmake_minimum_required(VERSION 3.8)
project(lang_sam_tracker)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# Find dependencies
find_package(ament_cmake REQUIRED)
find_package(ament_cmake_python REQUIRED)
find_package(rclpy REQUIRED)

# Install Python modules using ament_python
ament_python_install_package(${PROJECT_NAME})
ament_python_install_package(lang_sam)

# Install Python scripts as executables
install(PROGRAMS
  lang_sam_tracker/lang_sam_tracker_node.py
  DESTINATION lib/${PROJECT_NAME}
)

# Testing
if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()