<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lang_sam_wrapper</name>
  <version>0.0.1</version>
  <description>LangSAM wrapper for ROS2</description>
  <maintainer email="babaryusei.kw@gmail.com">Ryusei Baba</maintainer>
  <license>Apache-2.0</license>

  <!-- ビルドツール依存 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <!-- ビルド時依存 -->
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>libopencv-contrib-dev</build_depend>
  <build_depend>python3-dev</build_depend>
  <build_depend>pybind11_vendor</build_depend>
  <build_depend>pybind11-dev</build_depend>
  
  <!-- 実行時に必要な依存 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>libopencv-contrib-dev</exec_depend>
  
  <!-- AI/ML依存パッケージ -->
  <exec_depend>python3-torch</exec_depend>
  <exec_depend>python3-torchvision</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-pil</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  
  <!-- 外部Pythonパッケージ -->
  <exec_depend>python3-pip</exec_depend> <!-- lang_sam, supervisionインストール用 -->

  <!-- テスト依存 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>